# moon_traveler

./: .gitignore  .impeccable.md  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  HOW_TO_PLAY.md  README.md  ROADMAP.md  SECURITY.md  install.ps1  install.sh  play.py  play_tui.py  pyproject.toml  requirements.txt  social_posts.md  spec.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pages.yml  release.yml
assets/: README.md
docs/: beta.html  how-to-play.html  index.html  release-style.css  releases.html  story.html  v020.html  v03x.html  v040.html  v041.html  v050.html  v051.html  v052.html  v053.html
docs/diagrams/: README.md  c4-component-ai-creature.excalidraw  c4-component-game-engine.excalidraw  c4-component-persistence.excalidraw  c4-component-player.excalidraw  c4-component-tui.excalidraw  c4-container.excalidraw  c4-system-context.excalidraw
docs/features/: trickster-gambles.md
media/: blog-ascii-terrain-maps.html
packaging/: README.md
packaging/chocolatey/: moon-traveler-cli.nuspec  moon-traveler.nuspec
packaging/homebrew/: moon-traveler-cli.rb  moon-traveler.rb
packaging/steam/: README.md  app_build.vdf
scripts/: _walkthrough_session1.py  _walkthrough_session2.py  _walkthrough_session3.py  build_pyapp.py  build_release.py  drone_evolution_demo.py  drone_evolution_gif.py  screenshot_walkthrough.py  sound_demo.py  tui_screenshots.py  tui_walkthrough.py
scripts/pyinstaller_hooks/: hook-llama_cpp.py  rthook_llama.py
src/: __main__.py  animations.py  commands.py  config.py  creatures.py  dev_mode.py  difficulty.py  drone.py  game.py  game.tcss  input_handler.py  llm.py  player.py  save_load.py  ship_ai.py  sound.py  stats.py  travel.py  tui_app.py  tui_bridge.py  tutorial.py  ui.py  upgrade.py  world.py
src/data/: names.py  prompts.py
tests/: test_animations.py  test_create_llama.py  test_creatures.py  test_dev_mode.py  test_difficulty.py  test_drone.py  test_game.py  test_input_handler.py  test_integration.py  test_llm_actions.py  test_player.py  test_save_load.py  test_ship_ai.py  test_sound.py  test_stats.py  test_super_mode.py  test_travel.py  test_tui_bridge.py  test_tutorial.py  test_upgrade.py  test_world.py
(+1 files in other folders)
