[project]
name = "moon-traveler"
version = "0.4.2"
description = "A text-based survival game set on Saturn's moon Enceladus"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "rich",
    "llama-cpp-python",
    "psutil",
    "textual>=8.2.3",
]

[project.scripts]
moon-traveler = "src.tui_app:run_tui"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.10",
    "pyinstaller>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
"src/data/*" = ["E501"]
"src/world.py" = ["E501"]
"src/difficulty.py" = ["E501"]
"scripts/*" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
